--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ nav{
 }
 .slidebar .cross a i{
     font-size: 2.5rem;
-    color: white;
+    color: black;
 
 }
 .slidebar .cross a i:hover{
@@ -409,6 +409,97 @@ display: inline-block;
 
 }
 
+
+/* ----------------------MNC--------------- */
+.mnc{
+    padding: 25px 40px;
+}
+.mnc_main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    /* gap: 20px; */
+}
+
+.mnc_main .mnc-card{
+    width: 20%;
+    /* border: 1px solid black; */
+    text-align: center;
+}
+.mnc_main .mnc-card a{
+    font-size: 2.9rem;
+    color: #D1D1D1;
+    font-weight: 800;
+}
+.mnc_main .mnc-card a:hover{
+    color: var(--primary-color);
+}
+
+/* -----------------------MNC END ------------*/
+/* PATH_Start */
+
+.path{
+    background-color: #F6F7FC;
+    padding: 100px 0;
+}
+.path .path-main{
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-wrap: wrap;
+    padding: 50px 0;
+    width: 100%;
+    gap:72px 38px;
+}
+.path  .heading{
+    padding-bottom: 50px;
+}
+.path .path-main .card{
+    text-align: center;
+    /* border: 1px solid black; */
+    max-width:275px ;
+    width: 100%;
+    position: relative;
+    padding: 100px 32px 24px 32px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    background-color: #ffffff;
+}
+.path .path-main .card .txt p:nth-child(1){
+    font-size: 1.8rem;
+    font-weight: 600;
+
+    margin-bottom: 10px;
+
+}
+.path .path-main .card .txt p:nth-child(2){
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #9A9A9A;
+
+}
+
+.path .path-main figure{
+ position: absolute;
+ top: -6%;
+ left: 50%;
+ transform:translate(-50px,-50px) ;
+ -webkit-transform:translate(-50px,-50px) ;
+ -moz-transform:translate(-50px,-50px) ;
+ -ms-transform:translate(-50px,-50px) ;
+ -o-transform:translate(-50px,-50px) ;
+ box-shadow: 0px 4px 10px rgb(226, 226, 226);
+ border-radius: 50%;
+ -webkit-border-radius: 50%;
+ -moz-border-radius: 50%;
+ -ms-border-radius: 50%;
+ -o-border-radius: 50%;
+}
 
 
 
@@ -530,6 +621,7 @@ display: block;
         align-items: start;
         margin: 6px 0px;
     }
+  
    
     
    
@@ -590,7 +682,54 @@ display: block;
         padding: 10px 20px;
       
     }
-  
+    .bottom_navbar_main .navlist .slidebar li a{
+        font-size: 12px;
+       
+        padding: 10px;
+    
+       
+      
+      
+      }
+      .upper_nav_main .right_part .call i,.upper_nav_main .right_part .email i,.upper_nav_main .address i{
+      
+        font-size: 10px;
+     
+    
+       
+    }
+    .upper_nav_main .right_part .call a,.upper_nav_main .right_part .email a,.upper_nav_main .address a{
+    
+        font-size: 10px;
+      
+    
+    }
+    .slidebar .cross a i{
+        font-size: 20px;
+        
+    
+    }
+    .mnc_main .mnc-card{
+        width: 100%;
+        margin: 10px 0;
+       
+    }
+    .path .path-main figure{
+        width: 35%;
+       }
+       .path .path-main .card{
+        
+        padding: 80px 25px 12px 25px;
+      
+    }
+    .path .path-main .card .txt p:nth-child(1){
+       font-size: 12px;
+    
+    }
+    .path .path-main .card .txt p:nth-child(2){
+       font-size: 10px;
+    
+    }
 
   
 }
@@ -605,23 +744,40 @@ display: block;
     html{
         font-size: 30%;
     }
-    .banner .heading h1{
-        line-height: 25px;
-    }
     .banner .heading{
         margin-top: 90%;
-        width: 90%;
+        width: 100%;
       }
       .banner .search-container{
         padding: 10px;
         margin-bottom: 60px;
     }
-    .banner .heading p{
-        margin-top: 18px;
-        margin-bottom: 10px
+    .bottom_navbar_main .navlist .slidebar li a{
+        font-size: 12px;
+       
+        padding: 10px;
+    
+       
+      
+      
+      }
+      .upper_nav_main .right_part .call i,.upper_nav_main .right_part .email i,.upper_nav_main .address i{
+      
+        font-size: 10px;
+     
+    
+       
     }
-    .banner .search-container{
-        margin-top: 10px;
+    .upper_nav_main .right_part .call a,.upper_nav_main .right_part .email a,.upper_nav_main .address a{
+    
+        font-size: 10px;
+      
+    
+    }
+    .slidebar .cross a i{
+        font-size: 20px;
+        
+    
     }
   
 }
