--- a/css/joblisting.css
+++ b/css/joblisting.css
@@ -10,6 +10,9 @@
    
    
   }
+  .common-padding{
+    padding: 100px 0;
+  }
 
 html{
     font-size: 62.5%;
@@ -21,6 +24,7 @@ html{
 }
 html,body{
     overflow-x: hidden;
+    overflow-y: auto;
 
 }
 
@@ -54,6 +58,12 @@ h1{
     color: #FFFFFF;
     font-weight: 600;
     
+}
+.button_apply02{
+    padding: 8px 30px 8px 30px;
+    font-size: 1.2rem;
+    color: #FFFFFF;
+    background-color: var(--primary-color);
 }
 
 /* ------------Header----------------- */
@@ -200,7 +210,7 @@ nav{
   .bottom_navbar_main .navlist .slidebar  .active{
     transform: scale(0.95); /* Slightly shrink the button when clicked */
     background-color: rgba(135, 206, 235, 0.2); /* Light sky blue overlay effect */
-    padding: 5px ;
+    padding: 5px 20px ;
     border-radius: 5px; /* Optional: Smooth corners */
     border: 1px solid black;
 
@@ -208,7 +218,7 @@ nav{
 
 /* --------------------------banner----------------------- */
 .banner{
-    background:linear-gradient(to right,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url('../images/job.png');
+    background:linear-gradient(to right,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url('../images/joblisting.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -222,18 +232,22 @@ nav{
     cursor: pointer;
 }
 
-/* ----------------------banner end------------------- */
+/* ----------------------job listing start------------------- */
 
 /* filter-section */
 .fliter{
-    background-color: #F6F7FC;
-    padding-top: 100px;
+    background-color: #EBECF1;
+}
+
+.fliter .row{
+    margin: 0 -15px;
 }
 .filter_main{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 100%;
+    margin-bottom: 43px;
     
 }
 .filter_main .fill{
@@ -283,75 +297,149 @@ nav{
    
 }
 
-.path-main{
-    margin-top: 78px;
+
+
+.jobcard_main{
+    margin-top: 43px;
     display: flex;
-    justify-content: space-around;
-    align-items: stretch;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    padding: 50px 0;
+    gap: 50px;
+    
     width: 100%;
-    gap:38px;
+  
 }
-
-.path-main .card{
-    text-align: center;
-    /* border: 1px solid black; */
-    max-width:275px ;
+.jobcard_main .jobcard{
+    max-width: 376px;
     width: 100%;
-    position: relative;
-    padding: 100px 32px 24px 32px;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
-    background-color: #ffffff;
-    margin-bottom: 72px;
-}
- .path-main .card .txt a{
-    font-size: 1.8rem;
-    font-weight: 600;
-    color: black;
-
-    margin-bottom: 10px;
-
-}
-.path-main .card .txt p:nth-child(2){
-    font-size: 1.4rem;
-    font-weight: 500;
-    color: #9A9A9A;
-
-}
-
-.path-main figure{
- position: absolute;
- top: -6%;
- left: 50%;
- transform:translate(-50px,-50px) ;
- -webkit-transform:translate(-50px,-50px) ;
- -moz-transform:translate(-50px,-50px) ;
- -ms-transform:translate(-50px,-50px) ;
- -o-transform:translate(-50px,-50px) ;
- box-shadow: 0px 4px 10px rgb(226, 226, 226);
- border-radius: 50%;
- -webkit-border-radius: 50%;
- -moz-border-radius: 50%;
- -ms-border-radius: 50%;
- -o-border-radius: 50%;
-}
-.path-main .card figure a:hover{
-    cursor: pointer;
-
-}
-
-.path-main .card .txt a:hover{
-    color: var(--primary-color);
-}
-.path-main .card3 .txt a{
-    font-size: 1.6rem;
+    background-color: #F6F7FC;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    /* margin-bottom:50px ; */
     
 }
+.jobcard_main .jobcard:hover{
+    box-shadow: 0px 0px 15px 0px rgb(87, 86, 86);
+    transform: scaleY(1.1);
+    cursor: pointer;
+    -webkit-transform: scaleY(1.1);
+    -moz-transform: scaleY(1.1);
+    -ms-transform: scaleY(1.1);
+    -o-transform: scaleY(1.1);
+}
+.jobcard_main .jobcard .bottom-txt .apply a:hover{
+    background-color: #0080ff;
+
+    color: #000000;
+}
+
+
+.jobcard_main .jobcard .top_heading {
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding: 11px 0;
+    border-bottom: 1px solid #6C6D6F;
+
+
+}
+.jobcard_main .jobcard .bottom-txt{
+    padding: 28px 16px;
+}
+.jobcard_main .jobcard .bottom-txt p:nth-child(1){
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+.jobcard_main .jobcard .bottom-txt p:nth-child(2){
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.jobcard_main .jobcard .bottom-txt .jd{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
+.jobcard_main .jobcard .bottom-txt .jd p{
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 0;
+}
+.jobcard_main .jobcard .bottom-txt .apply{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8px;
+}
+.jobcard_main .jobcard .bottom-txt .apply p{
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #B4B4B4;
+    margin: 0;
+}
+.fliter .btn-pages{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+  
+}
+.fliter .btn-pages a{
+  
+    display: inline-block;
+    font-size: 2.2rem;
+    font-weight: 400;
+    color: var(--primary-color);
+}
+
+.fliter .btn-pages a:nth-child(1)
+{
+    padding: 7px 20px;
+    background-color: white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.fliter .btn-pages a:nth-child(2)
+{
+    padding: 12px 22px;
+    background-color: white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 1px solid var(--primary-color);
+}
+.fliter .btn-pages a:nth-child(3)
+{
+    padding: 14px 26px;
+    background-color: white;
+   
+  
+}
+.fliter .btn-pages a:hover{
+    background-color: #0080ff;
+    color: #000000;
+}
+
+
+
+
+
+/* -----------------------------------joblisting main  end----------------------*/
+
+
 
 /* footer */
 footer{
@@ -365,6 +453,7 @@ footer{
     padding-bottom: 59px;
     flex-wrap: wrap;
     gap: 50px ;
+   
 }
 .upper_footer .left_part{
     max-width: 350px;
@@ -564,6 +653,35 @@ display: block;
     padding-top: 80px;
 }
 
+.fliter .btn-pages a{
+  
+ 
+    font-size: 15px;
+  
+}
+
+.fliter .btn-pages a:nth-child(1)
+{
+    padding: 8px 17px;
+ 
+
+}
+.fliter .btn-pages a:nth-child(2)
+{
+    padding: 11px 18px;
+   
+}
+.fliter .btn-pages a:nth-child(3)
+{
+    padding: 8px 18px;
+
+   
+  
+}
+.fliter .btn-pages{
+  gap: 10%;
+  
+}
 
 
 
@@ -603,6 +721,61 @@ display: block;
 
     padding-top: 70px;
 }
+.jobs-off-day .jobcard_main .jobcard .top_heading {
+     
+    font-size: 12px;
+  
+
+
+}
+
+ .jobcard_main .jobcard .bottom-txt p:nth-child(1){
+    font-size: 16px;
+   
+}
+.jobcard_main .jobcard .bottom-txt p:nth-child(2){
+    font-size: 12px;
+   
+}
+
+.jobcard_main .jobcard .bottom-txt .jd p{
+  font-size: 12px;
+
+}
+
+.jobcard_main .jobcard .bottom-txt .apply p{
+    font-size: 12px;
+  
+}
+.fliter .btn-pages a:nth-child(1)
+{
+    padding: 8px 13px;
+ 
+
+}
+.fliter .btn-pages a:nth-child(2)
+{
+    padding: 11px 13px;
+   
+}
+.fliter .btn-pages a:nth-child(3)
+{
+    padding: 8px 13px;
+
+   
+  
+}
+.fliter .btn-pages{
+    width: 35%;
+    gap: 6%;
+    
+  }
+  .fliter .btn-pages a{
+  
+ 
+    font-size: 12px;
+  
+}
 
 
 
@@ -636,21 +809,44 @@ display: block;
         padding: 10px;
       
       }
-
-    /* .upper_footer .middle_part {
-        max-width: 350px;
+     .jobcard_main .jobcard .bottom-txt .jd{
+        flex-direction: column;
+        align-items: start;
+        gap: 5px;
+     }
+     .fliter .btn-pages{
+       gap: 15%;
+       width: 60%;
+       
+        
+      }
+      .fliter .btn-pages a{
+  
+ 
+        font-size: 10px;
       
     }
-    .upper_footer .rightpart {
-        max-width: 350px;
-      
-    } */
+  
+   
 
 }
 @media (max-width: 320px) {
     html{
         font-size: 43%;
     }
+    .jobcard_main .jobcard .bottom-txt .apply{
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+    }
+    .fliter .btn-pages{
+        gap: 15%;
+        width: 80%;
+        
+         
+       }
+     
+  
  
 
    
