--- a/css/apply.css
+++ b/css/apply.css
@@ -59,12 +59,21 @@ h1{
     font-weight: 600;
     
 }
-.button_apply02{
-    padding: 8px 30px 8px 30px;
-    font-size: 1.2rem;
+
+.button_upload{
+    padding: 15px 34px;
+    font-size: 1.8rem;
+   color: var(--primary-color);
+    background-color: white;
+}
+.button_apply03{
+    padding: 15px 54px;
+    font-size: 1.8rem;
     color: #FFFFFF;
     background-color: var(--primary-color);
+    display: inline-block;
 }
+
 
 /* ------------Header----------------- */
 /* -----------Navbar--------------------- */
@@ -218,7 +227,7 @@ nav{
 
 /* --------------------------banner----------------------- */
 .banner{
-    background:linear-gradient(to right,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url('../images/joblisting.png');
+    background:linear-gradient(to right,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url('../images/jobdetails.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -232,209 +241,265 @@ nav{
     cursor: pointer;
 }
 
+
 /* ----------------------job listing start------------------- */
 
 /* filter-section */
-.fliter{
-    background-color: #EBECF1;
+.apply {
+    background-color:#EBECF1;
 }
-
-.fliter .row{
-    margin: 0 -15px;
-}
-.filter_main{
+.apply-main{
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 43px;
-    
+    flex-direction: column;
 }
-.filter_main .fill{
+.apply .first-part-main {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    /* padding: 19px 38px; */
-    margin-right: 33px;
-    max-width: 65px;
-    width: 100%;
-    min-height: 35px;
-    height: 100%;
-
-}
-.filter_main .fill figure{
-   
-   max-width: 28px;
-   width: 100%;
-
-}
-
-
-.filter_main .fill p{
-    font-size: 1.8rem;
-}
-
-.filter_main .select-box{
-   margin-left: 33px;
-   /* border: 1px solid black; */
-   padding: 19px 38px;
-  max-width: 250px;
-  width: 100%;
-
-   border-radius: 25px;
-   -webkit-border-radius: 25px;
-   -moz-border-radius: 25px;
-   -ms-border-radius: 25px;
-   -o-border-radius: 25px;
-   background-color: white;
-}
-.filter_main .select-box #mySelect{
-    width: 100%;
-    border: none;
-    outline: none;
-    font-size: 1.4rem;
-    color: #BCBCBC;
-   
-}
-
-
-
-.jobcard_main{
-    margin-top: 43px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: stretch;
     flex-wrap: wrap;
-    gap: 50px;
-    
     width: 100%;
-  
-}
-.jobcard_main .jobcard{
-    max-width: 376px;
-    width: 100%;
-    background-color: #F6F7FC;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    /* margin-bottom:50px ; */
-    
-}
-.jobcard_main .jobcard:hover{
-    box-shadow: 0px 0px 15px 0px rgb(87, 86, 86);
-    transform: scaleY(1.1);
-    cursor: pointer;
-    -webkit-transform: scaleY(1.1);
-    -moz-transform: scaleY(1.1);
-    -ms-transform: scaleY(1.1);
-    -o-transform: scaleY(1.1);
-}
-.jobcard_main .jobcard .bottom-txt .apply a:hover{
-    background-color: #0080ff;
+    margin-bottom: 70px;
+    /* gap: 87px; */
 
-    color: #000000;
-}
-
-
-.jobcard_main .jobcard .top_heading p{
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 400;
-    padding: 11px 0;
-    border-bottom: 1px solid #6C6D6F;
-
-
-}
-.jobcard_main .jobcard .bottom-txt{
-    padding: 28px 16px;
-}
-.jobcard_main .jobcard .bottom-txt p:nth-child(1){
-    font-size: 1.6rem;
-    font-weight: 500;
-}
-.jobcard_main .jobcard .bottom-txt p:nth-child(2){
-    font-size: 1.2rem;
-    font-weight: 300;
-    line-height: 20px;
-    margin-bottom: 10px;
-}
-.jobcard_main .jobcard .bottom-txt .jd{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 8px;
-}
-.jobcard_main .jobcard .bottom-txt .jd p{
-  font-size: 1.2rem;
-  font-weight: 400;
-  margin: 0;
-}
-.jobcard_main .jobcard .bottom-txt .apply{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 8px;
-}
-.jobcard_main .jobcard .bottom-txt .apply p{
-    font-size: 1.2rem;
-    font-weight: 400;
-    color: #B4B4B4;
-    margin: 0;
-}
-.fliter .btn-pages{
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 20%;
-  
-}
-.fliter .btn-pages a{
-  
-    display: inline-block;
-    font-size: 2.2rem;
-    font-weight: 400;
-    color: var(--primary-color);
-}
-
-.fliter .btn-pages a:nth-child(1)
-{
-    padding: 7px 20px;
-    background-color: white;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
-.fliter .btn-pages a:nth-child(2)
-{
-    padding: 12px 22px;
-    background-color: white;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    border: 1px solid var(--primary-color);
-}
-.fliter .btn-pages a:nth-child(3)
-{
-    padding: 14px 26px;
-    background-color: white;
    
+}
+
+
+.apply .first-part-main .first-part-card{
+    max-width: 741px;
+    width: 100%;
+    display: flex;
+    /* justify-content: space-between; */
+    background-color: white;
+    flex-direction: column;
+    padding: 30px 37px;
+  
+    
+
+}
+.apply .first-part-main .first-part-card .row-1{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+    
+   
+}
+.apply .first-part-main .first-part-card .row-1 p:nth-child(1){
+    font-size: 2.7rem;
+    font-weight: 500;
+    /* margin-right: 50px; */
+}
+.apply .first-part-main .first-part-card .row-1 p:nth-child(2){
+    font-size: 1.8rem;
+    font-weight: 400;
+    /* margin-left: 50px; */
+}
+.apply .first-part-main .first-part-card .row-2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* max-width: 665px; */
+    width: 100%;
+    /* border:1px solid black; */
+    padding-top: 47px;
+   
+ 
+ 
+}
+.apply .first-part-main .first-part-card .row-2 p{
+    font-size: 2.0rem;
+    font-weight: 300;
+}
+/* .apply .first-part-main .row-2 p:nth-child(1){
+    margin-right: 36px;
   
 }
-.fliter .btn-pages a:hover{
-    background-color: #0080ff;
-    color: #000000;
+.apply .first-part-main .row-2 p:nth-child(2){
+    margin-right: 36px;
+    margin-left: 36px;
+  
+}
+.apply .first-part-main .row-2 p:nth-child(3){
+    margin-left: 36px;
+   
+}*/
+.apply .first-part-main .first-part-card .row-2 a{
+padding: 5px 12px 5px 5px;
+} 
+
+.apply .first-part-main .first-part-card .row-2 .company{
+    display: flex;
+}
+.apply .first-part-main .first-part-card .row-2 .location{
+    display: flex;
+}
+.apply .first-part-main .first-part-card .row-2 .theme{
+    display: flex;
+}
+.apply .first-part-main .first-part-card .row-2 .theme p{
+    color: #B6B6B6;
+}
+.apply .first-part-main .first-part-card .row-3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+}
+.apply .first-part-main .first-part-card .row-3 .jd p{
+    font-size: 2.0rem;
+    font-weight: 300;
 }
 
+.apply .first-part-main .second-card{
+    display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--primary-color);
+  max-width: 423px;
+  width: 100%;
+  padding: 57px 81px;
+}
+.apply .first-part-main .second-card .txt{
+    margin-bottom: 37px;
+    width: 88%;
+    text-align: center;
+}
+.apply .first-part-main .second-card .txt p{
+    color: white;
+    font-size:2.5rem;
+    font-weight: 400;
 
+    line-height: 33px;
+   
+}
+.apply .first-part-main .second-card a{
+    display: inline-block;
+}
 
+.apply .second-part-main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 70px;
+    flex-wrap: wrap;
+    padding: 0 35px;
+    width: 100%;
+}
+.apply .second-part-main .about-job{
+    width: 100%;
+    max-width: 741px;
+}
+.apply .second-part-main .about-job .txt-1{
+    width: 50%;
+}
+.apply .second-part-main .about-job .txt-2{
+    width: 50%;
+}
+.apply .second-part-main .about-job .txt-1{
+    width: 100%;
+    margin-bottom: 20px;
+}
+.apply .second-part-main .about-job .txt-1 p:nth-child(1)
+{
+    font-size: 2.7rem;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+.apply .second-part-main .about-job .txt-1 p:nth-child(2)
+{
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-top: 16px;
+    line-height: 33px;
+    margin-bottom: 17px;
+}
+.apply .second-part-main .about-job .txt-1 p:nth-child(3)
+{
+    font-size: 1.9rem;
+    font-weight: 300;
+    margin-top: 16px;
+    line-height: 33px;
+    margin-top: 17px;
+    margin-bottom: 17px;
+}
+.apply .second-part-main .about-job .txt-1 p:nth-child(4)
+{    margin-top: 17px;
+    font-size: 1.9rem;
+    font-weight: 300;
+    margin-top: 16px;
+    line-height: 33px;
+    margin-top: 17px;
+}
+.apply .second-part-main .about-job .txt-2{
+    width: 100%;
+    margin-top: 20px;
+}
+.apply .second-part-main .about-job .txt-2 p:nth-child(1)
+{
+    font-size: 2.7rem;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+.apply .second-part-main .about-job .txt-2 ul{
+    list-style-type:  disc;
+    /* padding: 10px; */
+    
+}
+.apply .second-part-main .about-job .txt-2 ul li::marker {
+    color: var(--primary-color) /* Blue bullet points */
+  }
+  .apply .second-part-main .about-job .txt-2 ul li{
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin: 30px 0;
+  }
+  .apply .second-part-main .about-job .txt-3{
+    margin-top: 27px;
+    font-size: 1.9rem;
+    font-weight: 300;
+  }
+  .apply .second-part-main .view-similar{
+    max-width: 259px;
+    width: 100%;
+  }
+ .view-similar .heading p{
+font-size: 2.0rem;
+font-weight: 600;
+margin-bottom: 24px;
+  }
+  .apply .second-part-main .view-similar .web-dev{
+    margin-top: 24px;
+    margin-bottom: 25px;
+  }
+.apply .second-part-main .view-similar .web-dev p:nth-child(1){
+    font-size: 2.3rem;
+    font-weight: 400;
+    margin: 0;
+    
+   
+} 
+  .apply .second-part-main .view-similar .web-txt{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.apply .second-part-main .view-similar .web-txt p:nth-child(1){
+font-size: 1.8rem;
+color: #8B8B8B;
+font-weight: 400;
+margin: 0;
+
+}
+.apply .second-part-main .view-similar .web-txt p:nth-child(2){
+    font-size: 1.5rem;
+ color: #A6A6A6;
+    
+    }
+    .apply .second-part-main .btn{
+        margin-top: 28px;
+    } 
 
 
 /* -----------------------------------joblisting main  end----------------------*/
@@ -610,6 +675,23 @@ footer{
     html{
         font-size: 58%;
     }
+    
+    
+    /* .apply .second-part-main .view-similar{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        max-width: 75%;
+    } */
+    .apply .first-part-main {
+        gap: 87px;
+        justify-content: center;
+        align-items: center;
+     
+        
+     }
+
+ 
 }
 
 
@@ -648,46 +730,26 @@ display: block;
     align-items:start;
    
  }
- .fliter{
-
-    padding-top: 80px;
-}
-
-.fliter .btn-pages a{
+ .apply .second-part-main{
+    
+    justify-content: start;
+    align-items: center;
   
  
-    font-size: 15px;
-  
-}
-
-
-.fliter .btn-pages a:nth-child(1)
-{
-    padding: 8px 17px;
+    gap: 40px;
  
-
-}
-.fliter .btn-pages a:nth-child(2)
-{
-    padding: 11px 18px;
    
+ 
 }
-.fliter .btn-pages a:nth-child(3)
-{
-    padding: 8px 18px;
+/* .view-similar{
+    max-width: 100%;
+} */
 
-   
-  
-}
-.fliter .btn-pages{
-  gap: 10%;
-  
-}
-.jobcard_main .jobcard .top_heading p{
-    font-size: 17px;
-  
-  
-  }
+
+
+
+
+
 
 
 
@@ -701,102 +763,15 @@ display: block;
    
 }
 @media (max-width: 767px) {
-   
-    
-
-    html{
+ html{
         font-size: 50%;
     }
 
-.filter_main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    
+
 }
- .path-main figure{
-    width: 35%;
-   }
- .path-main .card{
-    
-    padding: 80px 25px 12px 25px;
+
+@media (max-width: 574px) {
   
-}
-.fliter{
-
-    padding-top: 70px;
-}
-
-
- .jobcard_main .jobcard .bottom-txt p:nth-child(1){
-    font-size: 16px;
-   
-}
-.jobcard_main .jobcard .bottom-txt p:nth-child(2){
-    font-size: 12px;
-   
-}
-
-.jobcard_main .jobcard .bottom-txt .jd p{
-  font-size: 12px;
-
-}
-
-.jobcard_main .jobcard .bottom-txt .apply p{
-    font-size: 12px;
-  
-}
-.fliter .btn-pages a:nth-child(1)
-{
-    padding: 8px 13px;
- 
-
-}
-.fliter .btn-pages a:nth-child(2)
-{
-    padding: 11px 13px;
-   
-}
-.fliter .btn-pages a:nth-child(3)
-{
-    padding: 8px 13px;
-
-   
-  
-}
-.fliter .btn-pages{
-    width: 35%;
-    gap: 6%;
-    
-  }
-  .fliter .btn-pages a{
-  
- 
-    font-size: 12px;
-  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
-
-@media (max-width: 575px) {
-    .fliter{
-
-        padding-top: 60px;
-    }
     html{
         font-size: 45%;
     }
@@ -809,47 +784,137 @@ display: block;
         padding: 10px;
       
       }
-     .jobcard_main .jobcard .bottom-txt .jd{
+      .apply .first-part-main .first-part-card .row-2{
+       flex-direction: column;
+       align-items: start;
+       padding-top: 20px;
+       
+     
+     
+    }
+    .apply .first-part-main .first-part-card .row-1{
         flex-direction: column;
         align-items: start;
-        gap: 5px;
-     }
-     .fliter .btn-pages{
-       gap: 15%;
-       width: 60%;
-       
+     
         
-      }
-      .fliter .btn-pages a{
-  
- 
-        font-size: 10px;
+      
+      
+     }
+     .apply .first-part-main .first-part-card .row-3{
+        flex-direction: column;
+        align-items: start;
+     
+        
+      
+      
+     }
+     .apply .first-part-main .first-part-card .row-3 .apply-btn{
+      margin-top: 10px;
+     
+        
+      
+      
+     }
+     .apply .first-part-main .first-part-card .row-1 p{
+     margin: 5px 0;
+     
+        
+      
+      
+     }
+    .apply .first-part-main .first-part-card .row-3{
+      
+        padding-top: 20px;
+        
+      
+      
+     }
+     .button_apply03{
+        padding: 15px 26px;
+       
+    }
+    .apply{
+        padding: 35px 0;
+    }
+    .apply .first-part-main {
+        gap: 40px;
+       
+     
+        
+     }
+     .apply .first-part-main .second-card{
+    
+    
+      padding: 30px;
+    }
+    .apply .first-part-main .second-card{
+      
+      padding: 57px 50px;
+      margin-bottom: 20px;
+    }
+    .apply .second-part-main{
+      
+        margin-top: 35px;
       
     }
+    .apply .first-part-main {
+        
+        margin-bottom: 35px;
+        /* gap: 87px; */
+    
+       
+    }
+    .apply .second-part-main .about-job .txt-2 ul li {
+       margin: 10px 0;
+    }
+    .apply .second-part-main .about-job .txt-1 p:nth-child(2) {
+        line-height: 25px;
+        margin-bottom: 10px;
+    }
+    .apply .second-part-main .about-job .txt-1 p:nth-child(3) {
+        
+        margin-top: 10px;
+        margin-bottom: 10px;
+        line-height: 25px;
+    }
+    .apply .second-part-main .about-job .txt-1 p:nth-child(4) {
+        margin-top: 10px;
+        line-height: 25px;
+        margin-top: 10px;
+    }
+    
+
+
+.view-similar .heading p {
+   
+    margin-bottom: 12px;
+}
+.apply .second-part-main .view-similar .web-dev {
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+  
+    }
   
    
 
-}
+
 @media (max-width: 320px) {
     html{
-        font-size: 43%;
+        font-size: 40%;
     }
-    .jobcard_main .jobcard .bottom-txt .apply{
-        flex-direction: column;
-        align-items: start;
-        gap: 10px;
-    }
-    .fliter .btn-pages{
-        gap: 15%;
-        width: 80%;
-        
-         
-       }
-     
-  
- 
+    .bottom_navbar_main .navlist .slidebar li a{
+       
+        padding: 0px;
+      
+      }
+      .bottom_navbar_main .navlist .slidebar  .active{
 
-   
+        padding: 5px 10px ;
+      
     
+    }
+  
+       
 
 }
