--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ h4{
     display: block;
 }
 .button_view_all{
-    padding: 16px 42px 18px 42px;
+    padding: 16px 42px 16px 42px;
     font-size: 2.2rem;
     color: #FFFFFF;
     background-color: var(--primary-color);
@@ -737,6 +737,10 @@ display: block;
         width: 45%;
     
     }
+    .button_view_all{
+        padding: 14px 28px;
+     
+    }
 
 
    
@@ -818,7 +822,11 @@ display: block;
    
     
    
-    
+    .button_view_all{
+        padding: 12px 20px;
+        font-size: 17px;
+     
+    }  
    
    
 
@@ -829,7 +837,7 @@ display: block;
 }
 
 
-@media (max-width: 595px) {
+@media (max-width: 575px) {
     .banner{
         padding-top: 70%;
         padding-bottom: 85%;
