--- a/css/joblisting.css
+++ b/css/joblisting.css
@@ -221,7 +221,7 @@ nav{
     background:linear-gradient(to right,rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url('../images/joblisting.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     min-height: 570px;
     height: 100%;
     position: relative;
@@ -688,16 +688,7 @@ display: block;
   
   
   }
-
-
-
-
-    
- 
-
-
    
-    
    
 }
 @media (max-width: 767px) {
