--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ h4{
     background-color: var(--primary-color);
 }
 .button_upload{
-    padding: 15px 26px 12px 16px;
+    padding: 15px 26px;
     font-size: 2.2rem;
     color: #FFFFFF;
     background-color: var(--primary-color);
@@ -106,6 +106,7 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
 }
 
 a{
@@ -129,6 +130,9 @@ section,.row{
 .common-padding{
     padding:100px 0;
     
+}
+.row{
+    margin: 0 -15px;
 }
 
 
@@ -666,9 +670,416 @@ color: #000000;
 /* <!-- jobs-of day --end --> */
 
 
+/* Section hiring */
+.hiring{
+    background-color: #f7f6f6;
+}
+.hiring h3{
+    margin-bottom: 40px;
+}
+.hiring .button{
+    margin-top: 40px;
+}
+.hiring .button{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+.hiring .button a{
+    padding: 14px 48px;
+    border: 1px solid black;
+    display: inline-block;
+    border-radius: 25px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    font-size: 2.0rem;
+    font-weight: 300;
+    color: black;
+}
+.hiring .button .tele a{
+    padding: 14px 43px;
+
+}
+.hiring .button .finance a{
+    padding: 14px 20px;
+
+}
+
+.hiring .button a:hover{
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+}
+.hiring .card-img-main{
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    gap: 20px;
+    margin-bottom: 25px;
+}
+.hiring .card-img-main .card-img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    max-width: 216px;
+    width: 100%;
+    padding: 13px 28px;
+    text-align: center;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+.hiring .card-img-main .card-img figure{
+   height: 40%;
+}
+.hiring .card-img-main .card-img .card-body .star{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* border: 1px solid black; */
+    margin-bottom: 12px;
+}
+.hiring .card-img-main .card-img .card-body p:nth-child(1)
+{
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-bottom: 14px;
+    text-align: center;
+}
+.hiring .card-img-main .card-img .card-body .second-para
+{
+    font-size: 8.5px;
+    font-weight: 300;
+    line-height: 13px;
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+.hiring .card-img-main .card-img .card-body .star span
+{
+    font-size: 1.0rem;
+    font-weight: 300;
+    margin-left: 5px;
+ 
+}
+.hiring .card-img-main .card-img .card-body .star i{
+    color: rgb(233, 214, 1);
+}
+.hiring .card-img-main .card-img .card-body a{
+    padding: 6px 18px;
+    background-color: var(--primary-color);
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+.hiring .btn{
+    margin-top: 25px;
+}
+.hiring .btn a{
+    display: inline-block
+}
+
+/* section hiring end */
+
+/* upload-cv */
+.upload-cv{
+    background-color: #f7f6f6;
+    /* background-color: #0080ff; */
+}
+.upload-cv .box{
+    display: flex;
+    justify-content: flex-end;
+    align-items:center;
+    position: relative;
+    max-width: 1054px;
+    width: 100%;
+    /*border: 1px solid black;
+    */padding: 35px 94px;
+    background-color: white;
+    gap: 30px;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+   
+}
+.upload-cv .row{
+    padding:0 15px;
+}
+.upload-cv .box figure{
+    position: absolute;
+    top: -11%;
+    left: -16%;
+    transform: translate(2%,0%);
+    -webkit-transform: translate(2%,0%);
+    -moz-transform: translate(2%,0%);
+    -ms-transform: translate(2%,0%);
+    -o-transform: translate(2%,0%);
+    max-width: 448px;
+    width: 100%;
+}
+.upload-cv .box .txt{
+    width: 50%;
+}
+.upload-cv .box .txt p:nth-child(1)
+{
+    font-size:3.5rem;
+    font-weight: 500;
+    color: var(--primary-color);
+    line-height: 48px;
+}
+.upload-cv .box .txt p:nth-child(2)
+{   margin-top: 17px;
+    font-size:2.1rem;
+    font-weight: 300;
+    color: #737373;
+}
+.upload-cv .box .btn{
+    /* border: 1px solid red; */
+    /* margin: 0 auto; */
+}
+.upload-cv .box .btn a{
+    display: inline-block;
+}
+/* upload-cv end */
+
+/* Blog */
+.blog{
+    background-color: #f7f6f6;
+
+}
+.blog h3{
+    margin-bottom: 30px;
+}
+.blog .card-main{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    flex-wrap: wrap;
+    gap: 30px;
+    
+}
+.blog .card-main .card figure img{
+    /* height: 30%; */
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+.blog .card-main .card{
+    max-width: 394px;
+    width: 100%;
+    background-color: white;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+.blog .card-main .card .txt{
+    padding: 28px;
+}
+.blog .card-main .card .txt p:nth-child(1)
+{
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-bottom: 12px;
+}
+.blog .card-main .card .txt p:nth-child(2)
+{
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-bottom: 23px;
+}
+.blog .card-main .card .txt .txt-flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.blog .card-main .card .txt .txt-flex p{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0;
+   
+}
+/* Blog-end */
 
 
 
+
+
+
+/* Footer */
+footer{
+    background-color: var(--primary-color);
+}
+.upper_footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    width: 100%;
+    padding-bottom: 59px;
+    flex-wrap: wrap;
+    gap: 50px ;
+}
+.upper_footer .left_part{
+    max-width: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.upper_footer figure{
+   margin-bottom: 25px;
+}
+.upper_footer figure:hover{
+    cursor: pointer;
+}
+.upper_footer .icon{
+    
+    margin-top: 25px;
+ }
+ .upper_footer .icon a i:hover{
+    cursor: pointer;
+    color: black;
+ }
+ .upper_footer .icon a i{
+    font-size: 15px;
+    color: var(--primary-color);
+    padding: 8px;
+    background-color: white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin: 0 15px;
+}
+.upper_footer .middle_part {
+    max-width: 350px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+   
+    flex-direction: column;
+}
+.upper_footer .middle_part ul{
+    display: flex;
+    margin-bottom: 20px;
+  
+}
+.upper_footer .middle_part ul li:nth-child(1){
+   margin-right:7px; 
+  
+}
+.upper_footer .middle_part ul li:nth-child(2){
+    margin: 0 7px;
+   
+ }
+ .upper_footer .middle_part ul li:nth-child(3){
+    margin: 0 7px;
+   
+ }
+ .upper_footer .middle_part ul li:nth-child(4){
+   margin-left: 7px;
+   
+ }
+.upper_footer .middle_part ul li a{
+   font-size: 1.8rem;
+   color: white;
+   
+ }
+ .upper_footer .middle_part ul li a:hover{
+    cursor: pointer;
+    color: black;
+ }
+ .upper_footer .middle_part  .email i:hover,.upper_footer .middle_part  .email a:hover{
+    cursor: pointer;
+    color: black;
+ }
+
+ .upper_footer .middle_part  .call i:hover,.upper_footer .middle_part  .call a:hover{
+    cursor: pointer;
+    color: black;
+ }
+ .upper_footer .middle_part  .email{
+    margin-top: 11px;
+ }
+ .upper_footer .middle_part  .call{
+    margin-top: 20px;
+    margin-bottom: 11px;
+    width: 100%;
+ }
+ .upper_footer .middle_part  .call i,.upper_footer .middle_part  .email i{
+    font-size: 15px;
+    padding: 5px;
+ 
+   color: white;
+ }
+ .upper_footer .middle_part  .call a, .upper_footer .middle_part  .email a{
+    font-size:1.8rem ;
+    color: white;
+ }
+ .rightpart{
+    max-width: 350px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    gap: 10px;
+ }
+ .rightpart input{
+   
+    width: 70%;
+    padding: 12px 21px;
+    border: none;
+    outline: none;
+ }
+ .rightpart input::placeholder{
+    font-size: 1.4rem;
+    color: #B0B0B0;
+ }
+ .rightpart i{
+    font-size: 15px;
+    padding: 14px;
+    background-color: white;
+    color: var(--primary-color);
+ }
+ .rightpart i:hover{
+    cursor: pointer;
+    color: black;
+
+ }
+ footer .lower-footer{
+    border-top: 1px solid #EBECF1;
+    padding: 18px 0;
+    text-align: center;
+
+ }
+ footer .lower-footer p{
+  color: white;
+  font-size: 1.8rem;
+  font-weight: 500;
+
+ }
+
+
+/* footer-end */
 /* Responsive*/
 
 
@@ -687,6 +1098,30 @@ color: #000000;
 .banner .search-container{
     width: 75%;
 }
+
+
+.common-padding{
+    padding: 50px 0;
+}
+.upper_footer .middle_part ul li a{
+    font-size: 16.4px;
+     
+   }
+   .upper_footer .middle_part  .call a, .upper_footer .middle_part  .email a{
+    font-size: 16.4px;
+    
+  }
+  footer .lower-footer p{
+     
+    font-size: 16.4px;
+    } 
+    .rightpart input::placeholder{
+       
+        font-size: 16.4px;
+    
+    
+     } 
+
 }
 
 
@@ -741,10 +1176,64 @@ display: block;
         padding: 14px 28px;
      
     }
+    .common-padding{
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+  
+    
+    .upload-cv .box  figure{
+        width: 100%;
+        position: relative;
+        margin: 0 auto;
+      
+        left: 0%;
+          
+       }
+       .upload-cv .box{
+        flex-direction: column;
+        text-align: center;
+        padding: 50px;
+       }
+
+  
 
 
    
-    
+    .common-padding{
+        padding: 50px 0;
+    }  
+    .upper_footer {
+        align-items: start; 
+        gap: 20px;
+    }
+    .upper_footer .middle_part{
+        padding: 8px;
+    } 
+    .rightpart{
+   
+        justify-content: start;
+        align-items:start;
+       
+     }
+     .upper_footer .middle_part ul li a{
+        font-size: 15.4px;
+         
+       }
+       .upper_footer .middle_part  .call a, .upper_footer .middle_part  .email a{
+        font-size: 15.4px;
+        
+      }
+      footer .lower-footer p{
+         
+        font-size: 15.4px;
+        }  
+        .rightpart input::placeholder{
+       
+            font-size: 15.4px;
+        
+        
+         } 
    
 }
 
@@ -827,12 +1316,118 @@ display: block;
         font-size: 17px;
      
     }  
-   
-   
+    .hiring .button {
+        gap: 30px;
 
-  
-  
+    }
+    .hiring .button a{
+        padding: 14px 48px;
+       
+    }
+    .hiring .button .tele a{
+        padding: 14px 43px;
     
+    }
+  
+    .hiring .button .finance a{
+        padding: 14px 38px;
+    }
+    .hiring{
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+    .hiring h3{
+        margin-bottom: 30px;
+    }
+    .hiring .button{
+      
+        margin-top: 30px;
+    }
+    .hiring .card-img-main .card-img .card-body p:nth-child(1)
+{
+   font-size: 12px;
+}
+.hiring .card-img-main .card-img .card-body .second-para
+{
+   font-size: 8.5px;
+
+}
+.hiring .card-img-main .card-img .card-body .star span
+{
+    font-size: 10px;
+ 
+}
+
+.hiring .card-img-main .card-img .card-body a{
+   font-size: 12px;
+}
+.upload-cv .box{
+   
+    padding: 30px;
+   }
+   .upload-cv .box .txt p:nth-child(1)
+{
+   
+    line-height: 38px;
+}
+
+
+
+
+
+
+   
+   
+.upper_footer .middle_part .call {
+    margin-top: 10px;
+    margin-bottom: 5px;
+  
+}
+  
+.upper_footer .icon {
+    margin-top: 12px;
+} 
+.common-padding{
+    padding: 50px 0;
+} 
+.upper_footer .middle_part ul li a{
+    font-size: 14.4px;
+     
+   }
+   .upper_footer .middle_part  .call a, .upper_footer .middle_part  .email a{
+    font-size: 14.4px;
+    
+  }
+  footer .lower-footer p{
+     
+    font-size: 14.4px;
+    }  
+    .rightpart input::placeholder{
+       
+        font-size: 14.4px;
+    
+    
+     } 
+     /* .blog .card-main .card figure{
+        height: 40%;
+    } */
+     .blog .card-main .card .txt p:nth-child(1)
+{
+   font-size: 17px;
+  
+}
+.blog .card-main .card .txt p:nth-child(2)
+{
+    font-size: 12px;
+
+
+}
+
+.blog .card-main .card .txt .txt-flex p{
+    font-size: 12px;
+  
+   
+}
    
 }
 
@@ -960,6 +1555,83 @@ display: block;
        flex-direction: column;
        align-items: start;
     }
+    .hiring{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .hiring h3{
+        margin-bottom: 20px;
+    }
+    .hiring .button{
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .hiring .button a{
+        font-size: 17px;
+    }
+    .hiring .button .finance a{
+        padding: 14px 30px;
+        
+    }
+    .upload-cv .box{
+   
+        padding: 20px;
+       }
+       .upload-cv .box .txt{
+        width: 100%;
+       }
+.upload-cv .box .txt p:nth-child(1)
+{
+  
+    line-height: 30px;
+}
+.upload-cv .box .txt p:nth-child(2)
+{   margin-top: 10px;
+   
+}
+.upload-cv .box .txt p:nth-child(2)
+{  
+    font-size: 12px;
+}
+.common-padding{
+    padding: 40px 0;
+}
+.upper_footer .left_part{
+    padding: 8px;
+
+}
+.bottom_navbar_main .navlist .slidebar li a{
+   
+    padding: 10px;
+  
+  }
+  .upper_footer .middle_part ul li a{
+   font-size: 12.5px;
+    
+  }
+  .upper_footer .middle_part  .call a, .upper_footer .middle_part  .email a{
+    font-size:12.5px
+   
+ }
+ footer .lower-footer p{
+    
+    font-size:12.5px
+   }
+   .rightpart input::placeholder{
+       
+    font-size: 12.5px;
+
+
+ } 
+   .blog .card-main .card figure{
+        padding: 20px;
+    }
+    .blog .card-main .card .txt-flex{
+        flex-direction: column;
+    }
+
+
   
 }
 
@@ -1035,6 +1707,16 @@ display: block;
         flex-direction: column;
         align-items: start;
         gap: 10px;
+    }
+    .hiring .button a{
+        font-size: 15px;
+    }
+    .upload-cv .box{
+   
+        padding: 15px;
+       }
+    .common-padding{
+        padding: 30px 0;
     }
   
 }
