--- a/css/apply.css
+++ b/css/apply.css
@@ -204,7 +204,7 @@ nav{
 }
 .bottom_navbar_main .navlist .slidebar li a{
     font-size: 1.8rem;
-    color: rgb(30, 29, 29);
+     color: #0080ff;
     padding: 10px 20px;
     font-weight: 700;
   
