--- a/css/joblisting.css
+++ b/css/joblisting.css
@@ -324,12 +324,17 @@ nav{
 }
 .jobcard_main .jobcard:hover{
     box-shadow: 0px 0px 15px 0px rgb(87, 86, 86);
+    transition: all 0.4s ease-in-out;
     transform: scaleY(1.1);
     cursor: pointer;
     -webkit-transform: scaleY(1.1);
     -moz-transform: scaleY(1.1);
     -ms-transform: scaleY(1.1);
     -o-transform: scaleY(1.1);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
 }
 .jobcard_main .jobcard .bottom-txt .apply a:hover{
     background-color: #0080ff;
@@ -599,6 +604,11 @@ footer{
   font-weight: 500;
 
  }
+ footer .lower-footer p a{
+    color: white;
+ 
+  
+   }
 
 
 
