--- a/css/style.css
+++ b/css/style.css
@@ -279,9 +279,17 @@ nav{
     padding: 10px 20px;
     border-radius: 5px; /* Optional: Smooth corners */
     background-color: rgb(97, 97, 97);
-   
+    
 
 }
+.bottom_navbar_main .navlist .mainmenu  .active a:hover::after {
+    width: 0%; /* Expands underline on hover */
+    
+}
+.bottom_navbar_main .navlist .mainmenu  .active a:hover{
+color: white;
+}
+
 .bottom_navbar_main .navlist .mainmenu .toggler i{
     color: white;
     font-size: 25px;
@@ -822,6 +830,9 @@ display: inline-block;
 .path  .heading{
     padding-bottom: 50px;
 }
+.path .path-main .card:hover{
+    box-shadow: 0px 0px 30px 0px var(--primary-color);
+}
 .path .path-main .card{
     text-align: center;
     /* border: 1px solid black; */
@@ -922,12 +933,17 @@ display: inline-block;
 }
 .jobs-off-day .jobcard_main .jobcard:hover{
     box-shadow: 0px 0px 15px 0px rgb(87, 86, 86);
+    transition: all 0.4s ease-in-out;
     transform: scaleY(1.1);
     cursor: pointer;
     -webkit-transform: scaleY(1.1);
     -moz-transform: scaleY(1.1);
     -ms-transform: scaleY(1.1);
     -o-transform: scaleY(1.1);
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
 }
 .jobs-off-day .jobcard_main .jobcard .bottom-txt .apply a:hover{
     background-color: #0080ff;
@@ -1477,6 +1493,11 @@ footer{
   font-weight: 500;
 
  }
+ footer .lower-footer p a{
+    color: white;
+   
+  
+   }
 
 
 /* footer-end */
